delivery: harden credential refresh transfer retries and integration handoff